--- a/Projet2021/admin/lib/css/2021Style.css
+++ b/Projet2021/admin/lib/css/2021Style.css
@@ -3,3 +3,9 @@
     color: #F5F5F5;
     font-weight: bold;
 }
+
+.menu{
+    font-family:arial, sans-serif;
+    font-size: 150%;
+    font-weight: bold;
+}
