--- a/Projet2021/admin/lib/css/2021Style.css
+++ b/Projet2021/admin/lib/css/2021Style.css
@@ -9,3 +9,13 @@
     font-size: 150%;
     font-weight: bold;
 }
+
+.lien{
+    color:goldenrod;
+    font-size: 120%;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.lien:hover{
+    color:red;
+}
