commit du 27 avril 2021

--- a/Projet2021/admin/lib/css/2021Style.css
+++ b/Projet2021/admin/lib/css/2021Style.css
@@ -10,6 +10,12 @@
     font-weight: bold;
 }
 
+.carousel-caption{
+    color: goldenrod;
+    font-size: 120%;
+    background-color: gainsboro;
+}
+
 .lien{
     color:goldenrod;
     font-size: 120%;
