--- a/Projet2021/admin/lib/css/custom2021.css
+++ b/Projet2021/admin/lib/css/custom2021.css
@@ -7,4 +7,12 @@
     border:none;
     text-align: center;
     color:goldenrod;
+    background-color: gainsboro;
+}
+
+img {
+    width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
