Commit du 18 mai 2021

--- a/Projet2021/admin/lib/css/2021Style.css
+++ b/Projet2021/admin/lib/css/2021Style.css
@@ -25,3 +25,13 @@
 .lien:hover{
     color:red;
 }
+
+.lienPanier{
+    color:goldenrod;
+    font-size: 100%;
+    font-weight: bold;
+}
+
+.lienPanier:hover{
+    color:red;
+}
