Commit du 19 mai 2021

--- a/Projet2021/admin/lib/css/2021Style.css
+++ b/Projet2021/admin/lib/css/2021Style.css
@@ -27,6 +27,17 @@
     color:red;
 }
 
+.lienT{
+    color:goldenrod;
+    font-size: 120%;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.lienT:hover{
+    color:whitesmoke;
+}
+
 .lienPanier{
     color:goldenrod;
     font-size: 100%;
